<resources>
    <string name="app_name">PointofSale</string>
    <string name="login_point_of_sale">POINT OF SALE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_login">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_username">Username</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="string_full_name">Full Name</string>
    <string name="string_email">Email</string>
    <string name="string_address">Address</string>
    <string name="string_date_of_birth">Date of birth</string>
    <string name="string_password">Password</string>
    <string name="string_save">Save</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="array_age">
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="User">nav_user</string>
    <string name="string_gender">Gender</string>
    <string name="string_age">Age</string>
</resources>
